--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,5 @@ project(CppPrimerPlus)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(cpp main.cpp)
-add_executable(chap01 chap01/chap01.cpp)
+add_executable(chap01 chapt01_chapt10/chapt01.cpp)
+add_executable(chap02 chapt01_chapt10/chapt02.cpp)
