--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,4 @@ set(CMAKE_CXX_STANDARD 14)
 add_executable(cpp main.cpp)
 add_executable(chapt01 chapt01_chapt10/chapt01.cpp)
 add_executable(chapt02 chapt01_chapt10/chapt02.cpp)
+add_executable(chapt03 chapt01_chapt10/chapt03.cpp)
