--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,4 @@ add_executable(chapt01 chapt01_chapt10/chapt01.cpp)
 add_executable(chapt02 chapt01_chapt10/chapt02.cpp)
 add_executable(chapt03 chapt01_chapt10/chapt03.cpp)
 add_executable(chapt04 chapt01_chapt10/chapt04.cpp)
+add_executable(chapt05 chapt01_chapt10/chapt05.cpp)
