--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,5 @@ add_executable(chapt02 chapt01_chapt10/chapt02.cpp)
 add_executable(chapt03 chapt01_chapt10/chapt03.cpp)
 add_executable(chapt04 chapt01_chapt10/chapt04.cpp)
 add_executable(chapt05 chapt01_chapt10/chapt05.cpp)
+add_executable(chapt06 chapt01_chapt10/chapt06.cpp)
+add_executable(chapt07 chapt01_chapt10/chapt07.cpp)
